# ghc-events-time

./: GhcEventsPlot.hs  ghc-events-time.cabal
mains/: ghc-events-time.hs
src/GHC/Events/: Time.hs
src/GHC/Events/Time/: Diagrams.hs
test/: Spec.hs
test/data/: example-eventlog.eventlog  example-eventlog.hs  run.sh
