name:                ghc-events-time
version:             0.1.0
license:             MIT
author:              FP Complete
maintainer:          Niklas Hambüchen <niklas@fpcomplete.com>
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/fpco/ghc-events-time
bug-reports:         https://github.com/fpco/ghc-events-time/issues
synopsis:            Plots timed GHC -eventlog events in pretty graphs
description:
  Plots timed GHC -eventlog events in pretty graphs.


library
  default-language:    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    GHC.Events.Time
    GHC.Events.Time.Diagrams
  build-depends:
      base                          >= 4.5     && < 5
    , Chart                         >= 1.3     && < 1.4
    , Chart-diagrams                >= 1.3     && < 1.4
    , containers                    >= 0.5     && < 0.6
    , data-default-class            >= 0.0     && < 0.1
    , diagrams-cairo                >= 1.2     && < 1.3
    , diagrams-lib                  >= 1.2     && < 1.3
    , foldl                         >= 1.0     && < 1.1
    , ghc-events                    >= 0.4     && < 0.5
    , histogram-fill                >= 0.8     && < 0.9
    , vector                        >= 0.10    && < 0.11
  ghc-options:
    -Wall


executable ghc-events-time
  default-language:    Haskell2010
  main-is:             GhcEventsPlot.hs
  build-depends:
      base                          >= 4.5     && < 5
    , ghc-events-time
    , ghc-events                    >= 0.4     && < 0.5
    , optparse-applicative          >= 0.11    && < 0.12
  ghc-options:
    -Wall
