name:                ghc-events-time
version:             0.1.0
license:             MIT
author:              FP Complete
maintainer:          Niklas Hambüchen <niklas@fpcomplete.com>
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/fpco/ghc-events-time
bug-reports:         https://github.com/fpco/ghc-events-time/issues
synopsis:            Plots timed GHC -eventlog events in pretty graphs
description:
  Plots timed GHC -eventlog events in pretty graphs.


extra-source-files:
  test/data/run.sh
  test/data/example-eventlog.hs
  test/data/example-eventlog.eventlog


library
  default-language:    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    GHC.Events.Time
    GHC.Events.Time.Diagrams
  build-depends:
      base                          >= 4.5     && < 5
    , Chart                         >= 1.5     && < 1.9
    , Chart-diagrams                >= 1.5     && < 1.9
    , containers                    >= 0.5     && < 0.6
    , data-default-class            >= 0.0     && < 0.2
    , diagrams-cairo                >= 1.3     && < 1.4
    , diagrams-lib                  >= 1.3     && < 1.4
    , dlist                         >= 0.7     && < 0.9
    , filepath                      >= 1.3     && < 1.5
    , foldl                         >= 1.0     && < 1.3
    , ghc-events                    >= 0.4     && < 0.5
    , histogram-fill                >= 0.8     && < 0.9
    , split                         >= 0.2     && < 0.3
    , vector                        >= 0.10    && < 0.12
  ghc-options:
    -Wall


executable ghc-events-time
  default-language:    Haskell2010
  main-is:             mains/ghc-events-time.hs
  build-depends:
    -- Bounds set by the library
      base
    , ghc-events-time
    , containers
    , filepath
    , ghc-events
    -- Bounds set for the executable
    , optparse-applicative          >= 0.11    && < 0.13
  ghc-options:
    -Wall


test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             test/Spec.hs
  build-depends:
    -- Bounds set by the library
      base
    , ghc-events-time
    , containers
    , filepath
    -- Bounds set for the executable
    , directory                     >= 1.2     && < 1.3
    , hspec                         >= 2.1     && < 2.2
    , process                       >= 1.2     && < 1.3
    , QuickCheck                    >= 2.7     && < 2.9
    , temporary                     >= 1.2     && < 1.3
  ghc-options:
    -Wall
